tweak font size to fix overlap on lists

--- a/web/cobrands/barnet/barnet.scss
+++ b/web/cobrands/barnet/barnet.scss
@@ -21,7 +21,7 @@
     clear: both;
 }
 
-body {font-size: 77%; font-family: Arial, Helvetica, sans-serif; color: #3e3d44; padding: 0; margin: 0; line-height: 1.5; background: #e9e9ea;}
+body {font-size: 75%; font-family: Arial, Helvetica, sans-serif; color: #3e3d44; padding: 0; margin: 0; line-height: 1.5; background: #e9e9ea;}
 body > html {font-size: 12px;}
 
 #barnet-wrapper {padding: 0; margin: 20px auto; width: 960px; background: #fff;}
